sol/2015-p2-f2-calculo.txt
Cálculo
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2015f2p2_calculo.cpp: In function ‘std::vector<int> addOBI2015(std::vector<int>, std::vector<int>)’:
2015f2p2_calculo.cpp:17:5: error: ‘reverse’ was not declared in this scope
   17 |     reverse(result.begin(), result.end());
      |     ^~~~~~~